[2.1.24]
- Fixed a compiler error on the CHERI architecture.

[2.1.23]
- Clustering in parallel across multiple nodes using the `--parallel-tmpdir` option now outputs
  accessions (separated into volumed files) instead of ordinal ids if not using `--oid-output`,
  applies tantan, motif and seed complexity masking during seeding by default consistent with
  the regular clustering workflow, and runs faster.
- Added the option `--aln-out` to output alignments for clustering workflows when using
  the option `--parallel-tmpdir`.
- Fixed a potential crash (thanks @jchorl).
- Fixed a potential crash in the clustering workflows.

[2.1.22]
- Fixed compiler errors for GCC 4.8.5.
- Improved performance of the computing alignments stage.
- Fixed a bug that caused the `--hit-membuf` option not to function correctly.
- Fixed potential crashes when using the `--parallel-tmpdir` option for clustering.
- Added the option `--linclust-chunk-size` to set database chunk size for clustering
  using the `--parallel-tmpdir` option.
- Fixed a potential hanging problem on macOS.
- Fixed a memory leak.

[2.1.21]
- Fixed a potential segmentation fault.

[2.1.22]
- Fixed a crash when using `--swipe`.
- Fixed a crash when using `--global-ranking/-g`

[2.1.21]
- Fixed a potential segmentation fault.

[2.1.20]
- Fixed a bug that could cause filtering by taxonomy to malfunction for BLAST databases
  (present since v2.1.18).
- Fixed a memory leak (present since v2.1.19).
- Fixed a potential deadlock.
- Fixed a potential compilation error on arm64 systems.
- Fixed an error when using BLAST databases that were read-only.
- Fixed missing invocation information and a missing newline when using
  `--header verbose`.

[2.1.19]
- Improved performance of the searching alignments stage and fixed a potential
  performance issue present since v2.1.15.
- Fixed search paths for SQLite3 on Ubuntu.
- Fixed a crash when using the `--parallel-tmpdir` option for clustering.

[2.1.18]