@@ -1,5 +1,6 @@
 [2.1.24]
 - Fixed a compiler error on the CHERI architecture.
+- Clustering workflows now support `--gapopen`, `--gapextend`, `--matrix` and `--custom-matrix`.
 
 [2.1.23]
 - Clustering in parallel across multiple nodes using the `--parallel-tmpdir` option now outputs
